fix collapsing animation nav menu

--- a/src/sass/global/_header.scss
+++ b/src/sass/global/_header.scss
@@ -145,7 +145,15 @@ $header-sm-height : 50px;
 				}
 
 			}
+			&.collapsing{
+				position: relative;
+				height: 0;
+				opacity: 0;
+				overflow: hidden;
+				transition: height 0.2s ease;
+			}
 		}
+
 	}
 
 }
