--- a/src/sass/global/_style.scss
+++ b/src/sass/global/_style.scss
@@ -1,7 +1,6 @@
 .style{
 	display: block;
 	width: 100%;
-	height: 100px;
 	&-item{
 		display: inline-block;
 		padding: 5px;
@@ -48,7 +47,10 @@
 	}
 	@include media-breakpoint-down(sm){
 		&-item{
+			display: inline-block;
 			width: 48%;
+			max-width: 100px;
+			height: auto;
 		}
 	}
 }
